--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
+    "antd": "^3.21.2",
     "firebase": "^6.3.3",
     "mdbreact": "^4.18.1",
     "react": "^16.8.6",
@@ -13,6 +14,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-search-box": "^2.0.1",
     "redux": "^4.0.4"
   },
   "scripts": {
