--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,16 @@
 {
-  "database": {
-    "rules": "shopping-cart"
+  "hosting": {
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
